# indirectQ

./: README.md  pyproject.toml  setup.py  slope_area.yml
examples/: Example01_Basic_SlopeArea_Calculation.ipynb  Example_Building_A_Channel.ipynb
indirectQ/: __init__.py  channelbuilder.py  slopearea.py  utilities.py
requirements/: indirectq.txt  indirectq.yaml
sample_data/HWM_points/: West_Fork_Rock_Cr_20220628HWMs_EPSG32100.csv
sample_data/channel_shapefiles/: Mannings_N_Regions.dbf  Mannings_N_Regions.prj  Mannings_N_Regions.sbn  Mannings_N_Regions.sbx  Mannings_N_Regions.shp  Mannings_N_Regions.shx  WFRC_Chan_Centerline_EPSG32100.dbf  WFRC_Chan_Centerline_EPSG32100.sbn  WFRC_Chan_Centerline_EPSG32100.sbx  WFRC_Chan_Centerline_EPSG32100.shp  WFRC_Chan_Centerline_EPSG32100.shp.xml  WFRC_Chan_Centerline_EPSG32100.shx  WFRC_SAxsections_EPSG32100.dbf  WFRC_SAxsections_EPSG32100.prj  WFRC_SAxsections_EPSG32100.sbn  WFRC_SAxsections_EPSG32100.sbx  WFRC_SAxsections_EPSG32100.shp  WFRC_SAxsections_EPSG32100.shp.xml  WFRC_SAxsections_EPSG32100.shx
sample_data/topo_raster/: WFRC_lidar_20cm_EPSG32100.tif.aux.xml  WFRC_lidar_20cm_EPSG32100.tif.ovr  WFRC_lidar_20cm_EPSG32100.tif.xml
scripts/: main.py
scripts/runconfig/: __init__.py  inputpaths.py
src/indirectQ/: __init__.py  channelbuilder.py  config.py  profile.py  slopearea.py  utilities.py
src/indirectQ.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
