[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "indirectQ"
version = "0.0.1"
description = "Package for implementing USGS Technical Methods for indirectly calculating discharge."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["hydrology", "climate", "data", "meteorology"]
authors = [
    {name = "T.L. Blythe", email="todd.blythe@mt.gov"}
]
maintainers = [
    {name = "MT Dept. of Natural Resources and Conservation", email="todd.blythe@mt.gov"}
]
classifiers = [
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Hydrographers, Geomorphologists, Hydrologists",
  "Topic :: Hydraulics :: Indirect Discharge",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
    "rasterio",
    "geopandas"
]
